--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -53,7 +53,8 @@
     "react/jsx-props-no-spreading": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "import/prefer-default-export": "off"
+    "import/prefer-default-export": "off",
+    "global-require": "off"
   },
   "settings": {
     "import/resolver": {
