--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
   "rules": {
     "operator-linebreak": "off",
     "no-console": "error",
+    "no-shadow": "off",
     "react/no-array-index-key": "off",
     "react/require-default-props": "off",
     "@typescript-eslint/no-explicit-any": "error",
