--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "clsx": "^2.0.0",
     "husky": "^8.0.3",
     "lucide-react": "^0.279.0",
-    "next": "latest",
+    "next": "^14.0.0",
     "nextjs-toploader": "^1.5.3",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
@@ -46,7 +46,7 @@
     "autoprefixer": "^10.4.16",
     "eslint": "latest",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-next": "latest",
+    "eslint-config-next": "^14.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard-with-typescript": "^39.1.0",
     "eslint-plugin-import": "^2.28.1",
