--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
     "operator-linebreak": "off",
     "no-console": "error",
     "no-shadow": "off",
+    "react/jsx-wrap-multilines": "off",
     "react/no-array-index-key": "off",
     "react/require-default-props": "off",
     "@typescript-eslint/no-explicit-any": "error",
