--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tabler/icons-react": "^2.38.0",
     "@tanstack/react-query": "^5.0.0",
     "@tanstack/react-query-devtools": "^5.0.3",
+    "@tanstack/react-table": "^8.10.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "husky": "^8.0.3",
