--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tanstack/react-table": "^8.10.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "colyseus.js": "^0.15.14",
     "husky": "^8.0.3",
     "lucide-react": "^0.279.0",
     "next": "^14.0.0",
