--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
+    "supabase": "^1.110.1",
     "tailwindcss": "^3.3.3",
     "typescript": "latest"
   }
